src/test/deca/syntax/valid/non_provided/test_guillemets.deca
// Description:
//    Programme minimaliste "testant" les guillemets dans les commentaires
//
// Resultats:
//  OK
//
// Historique:
//    cree le 18/01/2020

{
  int a = 2;
}
